darktable.css: Fix style dialog widget alignment.

--- a/data/themes/darktable.css
+++ b/data/themes/darktable.css
@@ -369,6 +369,11 @@ textview
   margin: 0.07em 0.4em 0.07em 0.07em;
 }
 
+dialog entry
+{
+  margin: 0.07em 0em 0.07em 0em;
+}
+
 .combo,
 entry,
 #dt-metadata-multi,
